--- a/proyectoMVC/views/registro/index.html
+++ b/proyectoMVC/views/registro/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <nav id="navegacion" class="bg-blue-900 h-16">
+        
+    </nav>
     <h1>registro</h1>
+
+<script src="../components/nav.js"></script>
 </body>
 </html>
