--- a/ProyectoPFS/views/login/index.html
+++ b/ProyectoPFS/views/login/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Home</title>
+    <title>Document</title>
 </head>
 <body>
     
-    <nav id="navegacion" class="fixed top-0 right-0 left-0 bg-blue-900 h-16">
-    </nav>
+    <h1>Login</h1>
 
-
-    
-    <script src="../components/nav.js"></script>
-      
 </body>
 </html>
