--- a/ProyectoPFS/views/login/index.html
+++ b/ProyectoPFS/views/login/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <nav id="navegacion" class="fixed top-0 right-0 left-0 bg-blue-900 h-16">
+    </nav>
+
+   
+
+    
+    <script src="../components/nav.js"></script>
     
     <h1>Login</h1>
 
