--- a/ProyectoPFS/views/registro/index.html
+++ b/ProyectoPFS/views/registro/index.html
@@ -8,7 +8,67 @@
 </head>
 <body>
     
-    <h1>Registro</h1>
+    <nav id="navegacion" class="fixed top-0 right-0 left-0 bg-blue-900 h-16">
+    </nav>
+
+   <div class="pt-16">
+        <form id="formulario">
+            <div class="flex flex-col gap-2">
+                <label for="name-imput" class="font-bolt">
+                    Nombre <span class="text-red-500">*</span>
+                </label>
+                <input 
+                type="text"
+                id="name-imput"
+                autocomplete="off"
+                placeholder="Rodney Gallardo"
+                class="rounde-lg p-2 focus:outline-blue-600">
+                <p class="text-xs">Este campo es obligatorio</p>
+            </div>
+            
+            <div class="flex flex-col gap-2">
+                <label for="email-imput" class="font-bolt">
+                    Email <span class="text-red-500">*</span>
+                </label>
+                <input 
+                type="email"
+                id="email-imput"
+                autocomplete="off"
+                placeholder="rodney@gmail.com"
+                class="rounde-lg p-2 focus:outline-blue-600">
+                <p class="text-xs">El correo es obligatorio</p>
+            </div>
+
+            <div class="flex flex-col gap-2">
+                <label for="password-imput" class="font-bolt">
+                    Password <span class="text-red-500">*</span>
+                </label>
+                <input 
+                type="password"
+                id="password-imput"
+                autocomplete="off"
+                class="rounde-lg p-2 focus:outline-blue-600">
+                <p class="text-xs">Debe tener al menos 1 letra<br>Debe tener al menos una mayuscula<br>Debe tener al menis un numero<br>Debe tener entre 8 y 16 caracteres<br>Debe tener al menos un caracter especial</p>
+            </div>
+
+            <div class="flex flex-col gap-2">
+                <label for="match-imput" class="font-bolt">
+                    Confirmar Password <span class="text-red-500">*</span>
+                </label>
+                <input 
+                type="password"
+                id="match-imput"
+                class="rounded-lg p-2 focus:outline-blue-600">
+                <p class="text-xs">Debe coincidir con el password</p>
+            </div>
+            <button class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out">Registrar</button>
+        </form>
+   </div>
+
+    
+
+    <script src="../components/nav.js"></script>
+
 
 </body>
 </html>
