--- a/ProyectoPFS/views/registro/index.html
+++ b/ProyectoPFS/views/registro/index.html
@@ -11,8 +11,8 @@
     <nav id="navegacion" class="fixed top-0 right-0 left-0 bg-blue-900 h-16">
     </nav>
 
-   <div class="pt-16">
-        <form id="formulario">
+   <div class="pt-16 h-screen px-4 flex max-w-7xl mx-auto justify-center items-center gap-4">
+        <form id="formulario" class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg lg:w-2/4 shadow-xl">
             <div class="flex flex-col gap-2">
                 <label for="name-imput" class="font-bolt">
                     Nombre <span class="text-red-500">*</span>
@@ -61,14 +61,17 @@
                 class="rounded-lg p-2 focus:outline-blue-600">
                 <p class="text-xs">Debe coincidir con el password</p>
             </div>
-            <button class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out">Registrar</button>
+            <button id="form-btn" class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out">Registrar</button>
         </form>
+        <div>
+            <img src="/images/registro.svg" alt="imagen de registro">
+        </div>
    </div>
 
     
 
     <script src="../components/nav.js"></script>
-
+   <script src="index.js"></script>
 
 </body>
 </html>
