--- a/ProyectoPFS/views/registro/index.html
+++ b/ProyectoPFS/views/registro/index.html
@@ -14,12 +14,12 @@
    <div class="pt-16 h-screen px-4 flex max-w-7xl mx-auto justify-center items-center gap-4">
         <form id="formulario" class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg lg:w-2/4 shadow-xl">
             <div class="flex flex-col gap-2">
-                <label for="name-imput" class="font-bolt">
+                <label for="name-input" class="font-bolt">
                     Nombre <span class="text-red-500">*</span>
                 </label>
                 <input 
                 type="text"
-                id="name-imput"
+                id="name-input"
                 autocomplete="off"
                 placeholder="Rodney Gallardo"
                 class="rounde-lg p-2 focus:outline-blue-600">
@@ -27,12 +27,12 @@
             </div>
             
             <div class="flex flex-col gap-2">
-                <label for="email-imput" class="font-bolt">
+                <label for="email-input" class="font-bolt">
                     Email <span class="text-red-500">*</span>
                 </label>
                 <input 
                 type="email"
-                id="email-imput"
+                id="email-input"
                 autocomplete="off"
                 placeholder="rodney@gmail.com"
                 class="rounde-lg p-2 focus:outline-blue-600">
@@ -40,24 +40,24 @@
             </div>
 
             <div class="flex flex-col gap-2">
-                <label for="password-imput" class="font-bolt">
+                <label for="password-input" class="font-bolt">
                     Password <span class="text-red-500">*</span>
                 </label>
                 <input 
                 type="password"
-                id="password-imput"
+                id="password-input"
                 autocomplete="off"
                 class="rounde-lg p-2 focus:outline-blue-600">
                 <p class="text-xs">Debe tener al menos 1 letra<br>Debe tener al menos una mayuscula<br>Debe tener al menis un numero<br>Debe tener entre 8 y 16 caracteres<br>Debe tener al menos un caracter especial</p>
             </div>
 
             <div class="flex flex-col gap-2">
-                <label for="match-imput" class="font-bolt">
+                <label for="match-input" class="font-bolt">
                     Confirmar Password <span class="text-red-500">*</span>
                 </label>
                 <input 
                 type="password"
-                id="match-imput"
+                id="match-input"
                 class="rounded-lg p-2 focus:outline-blue-600">
                 <p class="text-xs">Debe coincidir con el password</p>
             </div>
