--- a/ProyectoPFS/views/registro/index.html
+++ b/ProyectoPFS/views/registro/index.html
@@ -61,7 +61,7 @@
                 class="rounded-lg p-2 focus:outline-blue-600">
                 <p class="text-xs">Debe coincidir con el password</p>
             </div>
-            <button id="form-btn" class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out">Registrar</button>
+            <button id="form-btn" disabled class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out disabled:opacity-50 disabled:cursor-not-allowed">Registrar</button>
         </form>
         <div>
             <img src="/images/registro.svg" alt="imagen de registro">
