--- a/ProyectoPFS/views/home/index.html
+++ b/ProyectoPFS/views/home/index.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     
-    <nav id="navegacion" class="fixed top-0 right-0 left-0 bg-blue-900 h-16">
-    </nav>
+    <nav id="navegacion" class="fixed top-0 right-0 left-0 bg-blue-900 h-16"></nav>
 
-   
+<div class="pt-16 h-screen flex justify-center items-center flex-col md:flex-row gap-4 px-4 lg:w-3/5 mx-auto md:gap-8">
+
+    <h1 class="text-blue-700 font-bold text-4x1 md:text-7x1">Restaurant App</h1>
+    <div>
+        <p class="text-justify py-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, magni voluptatibus. Inventore quia recusandae quisquam maiores ipsa molestias quis tempore nihil odio quaerat, nisi saepe, ipsum ut quibusdam, necessitatibus expedita.</p>
+        <div class="flex justify-around gap-4">
+            <a href="/login/" class="bg-blue-950 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700 transition ease-in-out">Login</a>
+            <a href="/registro/" class="text-black bg-blue-700 font-bold hover:bg-blue-300 px-4 py-2 rounded-lg transition ease-in-out">Registro</a>
+        </div> 
+    </div>
+    
+
+</div>
+
+
 
     
     <script src="../components/nav.js"></script>
