--- a/ProyectoPFS/views/login/index.html
+++ b/ProyectoPFS/views/login/index.html
@@ -1,52 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <nav
+      id="navegacion"
+      class="fixed top-0 right-0 left-0 bg-blue-900 h-16"
+    ></nav>
 
-    <nav id="navegacion" class="fixed top-0 right-0 left-0 bg-blue-900 h-16">
-    </nav>
+    <div
+      class="pt-16 h-screen px-4 flex max-w-7xl mx-auto justify-center items-center"
+    >
+      <form
+        id="formulario"
+        class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg lg:w-2/4 shadow-xl"
+      >
+        <div class="flex flex-col gap-2">
+          <label for="email-imput" class="font-bolt">
+            Email <span class="text-red-500">*</span>
+          </label>
+          <input
+            type="email"
+            id="email-imput"
+            autocomplete="off"
+            placeholder="rodney@gmail.com"
+            class="rounde-lg p-2 focus:outline-blue-600"
+          />
+        </div>
 
-    <div class="pt-16 h-screen px-4 flex max-w-7xl mx-auto justify-center items-center">
-        <form id="formulario" class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg lg:w-2/4 shadow-xl">
-            
-            <div class="flex flex-col gap-2">
-                <label for="email-imput" class="font-bolt">
-                    Email <span class="text-red-500">*</span>
-                </label>
-                <input 
-                type="email"
-                id="email-imput"
-                autocomplete="off"
-                placeholder="rodney@gmail.com"
-                class="rounde-lg p-2 focus:outline-blue-600">
+        <div class="flex flex-col gap-2">
+          <label for="password-imput" class="font-bolt">
+            Password <span class="text-red-500">*</span>
+          </label>
+          <input
+            type="password"
+            id="password-imput"
+            autocomplete="off"
+            class="rounde-lg p-2 focus:outline-blue-600"
+          />
+          <p id="texto-error"></p>
+        </div>
 
-            </div>
+        <button
+          class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out"
+        >
+          Iniciar Sesion
+        </button>
+      </form>
+    </div>
 
-            <div class="flex flex-col gap-2">
-                <label for="password-imput" class="font-bolt">
-                    Password <span class="text-red-500">*</span>
-                </label>
-                <input 
-                type="password"
-                id="password-imput"
-                autocomplete="off"
-                class="rounde-lg p-2 focus:outline-blue-600">
-                <p id="texto-error"></p>
-            </div>
-
-            <button class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out">Iniciar Sesion</button>
-        </form>
-   </div>
-
-    
     <script src="../components/nav.js"></script>
-    
-
-
-</body>
+    <script src="login.js"></script>
+  </body>
 </html>
