--- a/ProyectoPFS/views/registro/index.html
+++ b/ProyectoPFS/views/registro/index.html
@@ -1,78 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Document</title>
-</head>
-<body>
-    
-    <nav id="navegacion" class="fixed top-0 right-0 left-0 bg-blue-900 h-16">
-    </nav>
+  </head>
+  <body>
+    <nav
+      id="navegacion"
+      class="fixed top-0 right-0 left-0 bg-blue-900 h-16"
+    ></nav>
 
-   <div class="pt-16 h-screen px-4 flex max-w-7xl mx-auto justify-center items-center gap-4">
-        <form id="formulario" class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg lg:w-2/4 shadow-xl">
-            <div class="flex flex-col gap-2">
-                <label for="name-input" class="font-bolt">
-                    Nombre <span class="text-red-500">*</span>
-                </label>
-                <input 
-                type="text"
-                id="name-input"
-                autocomplete="off"
-                placeholder="Rodney Gallardo"
-                class="rounde-lg p-2 focus:outline-blue-600">
-                <p class="text-xs">Este campo es obligatorio</p>
-            </div>
-            
-            <div class="flex flex-col gap-2">
-                <label for="email-input" class="font-bolt">
-                    Email <span class="text-red-500">*</span>
-                </label>
-                <input 
-                type="email"
-                id="email-input"
-                autocomplete="off"
-                placeholder="rodney@gmail.com"
-                class="rounde-lg p-2 focus:outline-blue-600">
-                <p class="text-xs">El correo es obligatorio</p>
-            </div>
+    <div id="notification" class="fixed top-20 left-0 right-0"></div>
 
-            <div class="flex flex-col gap-2">
-                <label for="password-input" class="font-bolt">
-                    Password <span class="text-red-500">*</span>
-                </label>
-                <input 
-                type="password"
-                id="password-input"
-                autocomplete="off"
-                class="rounde-lg p-2 focus:outline-blue-600">
-                <p class="text-xs">Debe tener al menos 1 letra<br>Debe tener al menos una mayuscula<br>Debe tener al menis un numero<br>Debe tener entre 8 y 16 caracteres<br>Debe tener al menos un caracter especial</p>
-            </div>
-
-            <div class="flex flex-col gap-2">
-                <label for="match-input" class="font-bolt">
-                    Confirmar Password <span class="text-red-500">*</span>
-                </label>
-                <input 
-                type="password"
-                id="match-input"
-                class="rounded-lg p-2 focus:outline-blue-600">
-                <p class="text-xs">Debe coincidir con el password</p>
-            </div>
-            <button id="form-btn" disabled class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out disabled:opacity-50 disabled:cursor-not-allowed">Registrar</button>
-        </form>
-        <div>
-            <img src="/images/registro.svg" alt="imagen de registro">
+    <div
+      class="pt-16 h-screen px-4 flex max-w-7xl mx-auto justify-center items-center gap-4"
+    >
+      <form
+        id="formulario"
+        class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg lg:w-2/4 shadow-xl"
+      >
+        <div class="flex flex-col gap-2">
+          <label for="name-input" class="font-bold">
+            Nombre <span class="text-red-500">*</span>
+          </label>
+          <input
+            type="text"
+            id="name-input"
+            autocomplete="off"
+            placeholder="Rodney Gallardo"
+            class="rounde-lg p-2 focus:outline-blue-600"
+          />
+          <p class="text-xs">Este campo es obligatorio</p>
         </div>
-   </div>
 
-    
+        <div class="flex flex-col gap-2">
+          <label for="email-input" class="font-bold">
+            Email <span class="text-red-500">*</span>
+          </label>
+          <input
+            type="email"
+            id="email-input"
+            autocomplete="off"
+            placeholder="rodney@gmail.com"
+            class="rounde-lg p-2 focus:outline-blue-600"
+          />
+          <p class="text-xs">El correo es obligatorio</p>
+        </div>
+
+        <div class="flex flex-col gap-2">
+          <label for="password-input" class="font-bold border-green-700">
+            Password <span class="text-red-500">*</span>
+          </label>
+          <input
+            type="password"
+            id="password-input"
+            autocomplete="off"
+            class="rounde-lg p-2 focus:outline-blue-600"
+          />
+          <p class="text-xs">
+            Debe tener al menos 1 letra<br />Debe tener al menos una
+            mayuscula<br />Debe tener al menis un numero<br />Debe tener entre 8
+            y 16 caracteres<br />Debe tener al menos un caracter especial
+          </p>
+        </div>
+
+        <div class="flex flex-col gap-2">
+          <label for="match-input" class="font-bold">
+            Confirmar Password <span class="text-red-500">*</span>
+          </label>
+          <input
+            type="password"
+            id="match-input"
+            class="rounded-lg p-2 focus:outline-blue-600"
+          />
+          <p class="text-xs">Debe coincidir con el password</p>
+        </div>
+        <button
+          id="form-btn"
+          disabled
+          class="bg-blue-900 px-4 rounded-lg font-bold text-white hover:bg-blue-400 py-2 transition ease-in-out disabled:opacity-50 disabled:cursor-not-allowed"
+        >
+          Registrar
+        </button>
+      </form>
+      <div>
+        <img src="/images/registro.svg" alt="imagen de registro" />
+      </div>
+    </div>
 
     <script src="../components/nav.js"></script>
-   <script src="index.js"></script>
-
-</body>
+    <script type="module" src="index.js"></script>
+    <script type="module" src="../components/notificaciones.js"></script>
+  </body>
 </html>
