--- a/ProyectoPFS/views/login/index.html
+++ b/ProyectoPFS/views/login/index.html
@@ -20,12 +20,12 @@
         class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg lg:w-2/4 shadow-xl"
       >
         <div class="flex flex-col gap-2">
-          <label for="email-imput" class="font-bolt">
+          <label for="email-input" class="font-bold">
             Email <span class="text-red-500">*</span>
           </label>
           <input
             type="email"
-            id="email-imput"
+            id="email-input"
             autocomplete="off"
             placeholder="rodney@gmail.com"
             class="rounde-lg p-2 focus:outline-blue-600"
@@ -33,12 +33,12 @@
         </div>
 
         <div class="flex flex-col gap-2">
-          <label for="password-imput" class="font-bolt">
+          <label for="password-input" class="font-bold">
             Password <span class="text-red-500">*</span>
           </label>
           <input
             type="password"
-            id="password-imput"
+            id="password-input"
             autocomplete="off"
             class="rounde-lg p-2 focus:outline-blue-600"
           />
